// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutSpacer /> should render a layout spacer with no spacing sizes defined 1`] = `
.c0 {
  margin-bottom: 0px;
}

.c0:last-child {
  margin-bottom: 0px;
}

<LayoutSpacer
  contentItems={
    Array [
      Object {
        "content": <div>
          a
        </div>,
      },
      Object {
        "content": <div>
          b
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="layout_spacer"
  >
    <styled.div
      data-component-type="layout_spacer_item"
      key="0"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c0"
          data-component-type="layout_spacer_item"
        >
          <div>
            a
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="1"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c0"
          data-component-type="layout_spacer_item"
        >
          <div>
            b
          </div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</LayoutSpacer>
`;

exports[`<LayoutSpacer /> should render a layout spacer with null content 1`] = `
.c0 {
  margin-bottom: 0px;
}

.c0:last-child {
  margin-bottom: 0px;
}

<LayoutSpacer
  contentItems={
    Array [
      Object {
        "content": null,
        "spacingSize": 32,
      },
      Object {
        "content": <div>
          a
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="layout_spacer"
  >
    <styled.div
      data-component-type="layout_spacer_item"
      key="1"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c0"
          data-component-type="layout_spacer_item"
        >
          <div>
            a
          </div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</LayoutSpacer>
`;

exports[`<LayoutSpacer /> should render a layout spacer with varying spacing sizes 1`] = `
.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  margin-bottom: 24px;
}

.c1:last-child {
  margin-bottom: 0px;
}

.c2 {
  margin-bottom: 32px;
}

.c2:last-child {
  margin-bottom: 0px;
}

.c3 {
  margin-bottom: 40px;
}

.c3:last-child {
  margin-bottom: 0px;
}

.c4 {
  margin-bottom: 56px;
}

.c4:last-child {
  margin-bottom: 0px;
}

.c5 {
  margin-bottom: 0px;
}

.c5:last-child {
  margin-bottom: 0px;
}

<LayoutSpacer
  contentItems={
    Array [
      Object {
        "content": <div>
          c
        </div>,
        "spacingSize": 16,
      },
      Object {
        "content": <div>
          d
        </div>,
        "spacingSize": 24,
      },
      Object {
        "content": <div>
          e
        </div>,
        "spacingSize": 32,
      },
      Object {
        "content": <div>
          f
        </div>,
        "spacingSize": 40,
      },
      Object {
        "content": <div>
          g
        </div>,
        "spacingSizeOverride": 56,
      },
      Object {
        "content": <div>
          h
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="layout_spacer"
  >
    <styled.div
      data-component-type="layout_spacer_item"
      key="0"
      spacingSize={16}
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c5",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize={16}
      >
        <div
          className="c0"
          data-component-type="layout_spacer_item"
        >
          <div>
            c
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="1"
      spacingSize={24}
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c5",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize={24}
      >
        <div
          className="c1"
          data-component-type="layout_spacer_item"
        >
          <div>
            d
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="2"
      spacingSize={32}
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c5",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize={32}
      >
        <div
          className="c2"
          data-component-type="layout_spacer_item"
        >
          <div>
            e
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="3"
      spacingSize={40}
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c5",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize={40}
      >
        <div
          className="c3"
          data-component-type="layout_spacer_item"
        >
          <div>
            f
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="4"
      spacingSizeOverride={56}
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c5",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSizeOverride={56}
      >
        <div
          className="c4"
          data-component-type="layout_spacer_item"
        >
          <div>
            g
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="5"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c5",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c5"
          data-component-type="layout_spacer_item"
        >
          <div>
            h
          </div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</LayoutSpacer>
`;
